force-app/main/default/objects/ConfigureBookingSync__mdt/ConfigureBookingSync__mdt.object-meta.xml
<CustomObject>
    <label>ConfigureBookingSync</label>
    <pluralLabel>ConfigureBookingSyncs</pluralLabel>
</CustomObject>