force-app/main/default/objects/ConfigureBookingSync__mdt/fields/Booking_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Booking_API_Name__c</fullName>
    <label>Booking API Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>