force-app/main/default/objects/ConfigureBookingSync__mdt/fields/Booking_Sync_Mapping__c.field-meta.xml
<CustomField>
    <fullName>Booking_Sync_Mapping__c</fullName>
    <label>Booking Sync Mapping</label>
    <referenceTo>Booking_Sync_Mapping__mdt</referenceTo>
    <relationshipLabel>ConfigureBookingSyncs</relationshipLabel>
    <relationshipName>ConfigureBookingSyncs</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>