force-app/main/default/objects/ConfigureBookingSync__mdt/fields/Booking_Value__c.field-meta.xml
<CustomField>
    <fullName>Booking_Value__c</fullName>
    <label>Booking Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>