force-app/main/default/objects/ConfigureBookingSync__mdt/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>Booking_API_Name__c</columns>
    <columns>Operator__c</columns>
    <columns>Booking_Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>My View</label>
</ListView>